--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.0
+aiosignal==1.3.1
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+colorama==0.4.6
+frozenlist==1.5.0
 idna==3.10
+iniconfig==2.0.0
+isort==5.13.2
+multidict==6.1.0
+packaging==24.2
+pluggy==1.5.0
+propcache==0.2.0
+pytest==8.3.3
+python-dotenv==1.0.1
 requests==2.32.3
+ruff==0.7.3
 urllib3==2.2.3
+yarl==1.17.1
