--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 #  Complete the API keys before start using the software
 
 VIRUS_TOTAL_API_KEY = ""
-GSB_API_KEY = ""  # Google Safe Browsing API key
+GSB_API_KEY = ""
+
+#  Optional, required if using ChromeSafeBrowsingScanner
+CHROME_PATH = ""
+CHROME_USER_DATA_DIR = ""
