--- a/requirements.txt
+++ b/requirements.txt
@@ -25,15 +25,19 @@ pycparser==2.22
 pyee==12.0.0
 PySocks==1.7.1
 pytest==8.3.3
+pytest-runner==6.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+requests-mock==1.12.1
 ruff==0.7.3
 selenium==4.26.1
+setuptools==75.6.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+strf-hint==0.10
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
