--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #  Complete the API keys before start using the software
 
 VIRUS_TOTAL_API_KEY = ""
-GSB_API_KEY = ""
+GOOGLE_SAFE_BROWSING_API_KEY = ""
 
 #  Optional, required if using ChromeSafeBrowsingScanner
 CHROME_PATH = ""
