--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+validators==0.34.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
