--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pycparser==2.22
 pyee==12.0.0
 PySocks==1.7.1
 pytest==8.3.3
+pytest-asyncio==0.24.0
 pytest-runner==6.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
