--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,31 @@
 [tool.ruff]
 line-length = 120
+[tool.poetry]
+name = "phishing-detector"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <you@example.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.12"
+aiohttp = "^3.11.10"
+pandas = "^2.2.3"
+playwright = "^1.49.0"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+validators = "^0.34.0"
+
+
+[tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
+pytest = "^8.3.4"
+pytest-asyncio = "^0.24.0"
+requests-mock = "^1.12.1"
+ruff = "^0.8.2"
+pytest-runner = "^6.0.1"
+setuptools = "^75.6.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
